# rusty-tracker

./: .gitignore  Cargo.toml  README.md
metainfo/: rfid_demo.torrent  to.torrent
metainfo/src/: lib.rs  main.rs
tracker/: Cargo.toml
tracker/migrations/: 20230614212435_create_db.sql
tracker/src/: lib.rs  main.rs
tracker/templates/: 404.hbs  index.hbs  login.hbs  main_layout.hbs  menu.hbs  torrent_form.hbs  torrents.hbs  users.hbs
